# AdventOfCode2024

./: README.md  pyproject.toml
inputs/: input_orderings_day_5.txt
src/challenges/: day_1.py  day_10.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py
test/: test_day_1.py  test_day_10.py  test_day_2.py  test_day_4.py  test_day_6.py  test_day_7.py  test_day_8.py  test_input_orderings_day_5.txt
