[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "AdventOfCode2024"
description = "My project for the Advent of Code 2024 challenges."
requires-python = ">= 3.12"
authors = [
  {name = "Pavel Kulmon", email = "kulmon@seznam.cz"},
]
readme = {file = "README.txt", content-type = "text/markdown"}
license = {file = "LICENSE"}